--- a/Hacksmiths/Loginpage/quizzes/quiz1.html
+++ b/Hacksmiths/Loginpage/quizzes/quiz1.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="app">
-            <h2>QUESTION-1</h2>
+            <h2>QUIZ:<p>level-easy</p></h2>
             <div class="quiz">
                 <h2 id="question">Question goes here</h2>
                 <div id="options">
@@ -18,6 +18,6 @@
                 <button id="submit">Next</button>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="quiz.js"></script>
     </body>
 </html>
